FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20150818:
AUTHOR: kde@FreeBSD.org

  The CMAKE_ENV option has been deprecated. It no longer has any effect, and
  the CONFIGURE_ENV variable should be used instead.

20150818:
AUTHOR: mat@FreeBSD.org

  <opt>_IMPLIES and <opt>_PREVENTS have been introduced to register dependency,
  or conflicts between options.

    OPTIONS_DEFINE= FOO BAR BAZ

    FOO_IMPLIES=	BAR
    BAZ_PREVENTS= BAR

  If the FOO option is selected, the BAR option will be enabled as well.  If
  the BAZ and BAR options are both enabled, an error will be given.

20150817:
AUTHOR: mat@FreeBSD.org

  UNIQUENAME and LATEST_LINK have been removed. LATEST_LINK was only used by
  ports-mgmt/pkg{,-devel} and PKGBASE can be used in its stead.  UNIQUENAME was
  used by USE_LDCONFIG where it was not unique enough, and as old compat shims
  with options.

20150716:
AUTHOR:	kwm@FreeBSD.org

  USE_GHOSTSCRIPT was replaced by USES=ghostscript. The ghostscript USES
  accepts version, build, run, nox11 and for version 9 the agpl argument.
  If no version is specified, the default 9 for GHOSTSCRIPT_DEFAULT is honored.

20150701:
AUTHOR: mat@FreeBSD.org

  Make option target helpers have been added, it allows replacing:

    .include <bsd.port.options.mk>

    post-patch:
      ${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \
	${WRKSRC}/Configure ${WRKSRC}/hints/freebsd.sh
    .if ${PORT_OPTIONS:MPTHREAD}
      ${REINPLACE_CMD} -e 's|%%PTHREAD_LIBS%%|-lpthread|g;' \
	${WRKSRC}/hints/freebsd.sh
    .else
      ${REINPLACE_CMD} -e 's|%%PTHREAD_LIBS%%||g;' \
	${WRKSRC}/hints/freebsd.sh
    .endif

  with:

    post-patch:
      ${REINPLACE_CMD} -e 's|/usr/local|${LOCALBASE}|g' \